# MicroROS-Pi5-gesture-control

./: .gitignore  CHANGELOG.md  GESTURE_CHEAT_SHEET.txt  GESTURE_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  PRINTING_INSTRUCTIONS.md  QUICK_START_IMPROVEMENTS.md  README.md  REALVNC_IMPLEMENTATION_GUIDE.md  gesture_quick_reference.html  main.py  pyproject.toml  ros2_gesture_control.sh  run_in_docker.sh  start_gesture_control.sh  test_gestures_standalone.sh
config/: gesture_config.yaml
gesture_control/: __init__.py  dynamic_gestures.py  gesture_mapper.py  gesture_recognizer.py  static_gestures.py
ros2_nodes/: __init__.py  gesture_control_node.py
tests/: test_camera.py  test_gestures.py  test_unit_gestures.py
utils/: __init__.py  config_validator.py  visualization.py
