[project]
name = "microros-gesture-control"
version = "1.0.0"
description = "Custom hand gesture control system for MicroROS-Pi5 robot"
authors = [
    {name = "Fabian Linden", email = "fabian.linden@elixirr.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

# Note: ROS2 packages (rclpy, geometry-msgs, sensor-msgs, std-msgs) 
# are provided by your ROS2 Humble installation.
# Make sure to source ROS2 before running: source /opt/ros/humble/setup.bash

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gesture_control", "ros2_nodes", "utils", "tests"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
